domibusConnectorClient/domibusConnectorClientApplication/domibusConnectorClientContainer/src/main/k8s/dpl-template-connector-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-${lab.id}-connector-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${lab.id}-connector-client
  template:
    metadata:
      labels:
        app: ${lab.id}-connector-client
        pod.cp.cna.at/ingress: allow
    spec:
      volumes:
        - name: ecx-keystores
          configMap:
            name: ecx-keystores
            defaultMode: 420
        - name: temp
          emptyDir: {}
        - name: storage
          persistentVolumeClaim:
            claimName: ${lab.id}-connector-client-pvc
      containers:
        - name: ${lab.id}-connector-client
          image: centralrepo.apps.a3.cp.cna.at/brz-ju-images-poc-docker/jueu/dc-connector-client:${project.version}
          # image: default-route-openshift-image-registry.apps.a2.cp.cna.at/ju-eu-ejustice-eqs/dc-connector-client
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            request:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - name: storage
              mountPath: /app/data
              subPath: ${lab.id}/connector-client
            # - name: ecx-keystores
            #   mountPath: /app/config/keystores
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
---
kind: Service
apiVersion: v1
metadata:
  name: ${lab.id}-connector-client-svc
  labels:
    app: ${lab.id}-connector-client
spec:  
  ipFamilies:
    - IPv4
  ports:
    - name: ${lab.id}-connector-client-service-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster  
  selector:
    app: ${lab.id}-connector-client
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${lab.id}-connector-client-route
  labels:
    app: ${lab.id}-connector-client
spec:
  host: ${lab.id}-connector-client-ju-eu-ejustice-eqs.apps.a2.cp.cna.at
  path: /
  to:
    kind: Service
    name: ${lab.id}-connector-client-svc
    weight: 100
  port:
    targetPort: ${lab.id}-connector-client-service-port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
